Made anime covers have a fixed ratio, independent of their own size/ratio
And fixed a bug from the previous commit

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -135,3 +135,20 @@ body
 .anime_db_row {
   padding: 10px 0;
 }
+
+.anime-cover {
+  position: relative;
+  padding-bottom: 150%;
+}
+
+.anime-cover img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
